Revisi dari hasil feedback mentor
